--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Forge</title>
+    <meta name="description" content="Forge is an agency that focuses on building and creating."/>
   </head>
   <body>
     <div id="root"></div>
